<resources>
    <string name="app_name">Movie App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcom_tv">Let\'s find good movies to watch</string>
    <string name="login_text">Log In with one of the following options.</string>
    <string name="sign_text">Sign Up with one of the following options.</string>
    <string name="email">Email</string>
    <string name="email_hint">name@gmail.com</string>
    <string name="name">Name</string>
    <string name="name_hint">enter your name</string>
    <string name="password">password</string>
    <string name="password_hint">enter your password</string>
    <string name="login">login</string>
    <string name="dont_have_account">Dont have account?</string>
    <string name="have_account">Already have account?</string>
    <string name="signup">signup</string>
    <string name="item_profile">Profile</string>
    <string name="item_list">List</string>
    <string name="item_home">Home</string>
    <string name="movie_name">Movie Name</string>
    <string name="movie_date">Movie Date</string>
</resources>